--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!doctype html>
+<HTML>
+<HEAD>
+</HEAD>
+<TITLE>
+INCREDIBLE INDIA
+</TITLE>
+<BODY STYLE="BACKGROUND-IMAGE:URL(banner.jpg);OPACITY:.9;BACKGROUND-SIZE:COVER;BACKGROUND-REPEAT:NO-REPEAT;">
+<HEADER>
+<CENTER>
+<H1> INCREDIBLE INDIA </H1>
+<MARQUEE HSPACE="98PX" STYLE="COLOR:ORANGE"><B>EXPLORE THE BEST DESTINATION TO VISIT IN INDIA</B></MARQUEE>
 
+
+<H2 FONT-FAMILY-"LUCIDA CONSOLE">
+<UL STYLE="PADDING:10PX;">
+<LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="INDEX.HTML">HOME</A>||</LI>
+<LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="POPULAR.HTML">POPULAR DESTINATION</A>||</LI>
+<LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="SPIRITUAL.HTML">SPIRITUAL CAPITAL</A>||</LI>
+<LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="HERITAGE.HTML">HERITAGE SITES</A>||</LI>
+<LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="BEACH.HTML">SERENE BEACHES</A>||</LI>
+</UL>
+</H2>
+</CENTER>
+</HEADER>
+<SECTION STYLE="PADDING-LEFT:100PX;"><IMG SRC="https://tse3.mm.bing.net/th?id=OIP.ATYOACojPvz77bvPDkJI9AHaE8&pid=Api&P=0&w=236&h=157" height="225PX" WIDTH="650"></IMG></SECTION>
+
+<ARTICLE STYLE="MARGIN-TOP:100PX;PADDING-LEFT:100PX;PADDING-RIGHT:100PX;COLOR:Black;"><P STYLE="FONT-SIZE:20PX;">
+  
+     India, where cultures echoes, tradition speaks, beauty enthralls and diversity delights. Astounding diversity of 
+religious, languages, and cultures of India is unique and unparalleled. Indiais a land of diversity, and hence a 
+cultural cauldron.<BR>
+The Diversity is due to the contributions of different communities and tribes to the rich Indian heritage.<BR>
+     Tourists flock to India to witness the different cultures and biodiversity of the country. With a rich heritage
+and myriad attractions, the country is among the most popular tourist destinations in the world. It covers an 
+area of 32, 87, 263 sq.Km, extending from the snow- covered Himalayan heights to the tropical rain forests of
+the South.<BR> 
+     As the 7th largest country in the world, India stands apart from the rest of Asia, marked off as it is by mountains 
+and the sea. People from all over the world come to India to learn Yoga and meditation.
+</ARTICLE>
+<SECTION STYLE="PADDING-LEFT:100PX;MARGIN-TOP:230PX;COLOR:GREEN;FONT-SIZE:20PX;"
+<MARQUEE><H2>TOP 10 PLACES TO VISIT IN INDIA</H2></MARQUEE>
+<OL>
+<LI>Statue of Unity in Gujrat</LI>
+<LI>Forts in Rajasthan</LI>
+<LI>Statue of Equality at Hyderabad</LI>
+<LI>Back Waters in Kerala</LI>
+<LI>Kashmir valley</LI>
+<LI>Golden Temple in Amritsar</LI>
+<LI>Ladakh</LI>
+<LI>Beaches in Goa</LI>
+<LI>Varanasi and Vrindavan in UP</LI>
+<LI>Ajanta and Ellora Caves</LI>
+</OL>
+</SECTION>
+
+<FOOTER STYLE="BACKGROUND-COLOR:ORANGE;PADDING-LEFT:500PX;">
+<MARQUEE HSPACE="100PX">TO KNOW MORE ABOUT INDIA AND ITS CULTURES <a href='https://r.search.yahoo.com/_ylt=Awr4xJTY0gBibE8AqjJXNyoA;_ylu=Y29sbwNncTEEcG9zAzIEdnRpZAMEc2VjA3Ny/RV=2/RE=1644249944/RO=10/RU=https%3a%2f%2fsimple.wikipedia.org%2fwiki%2fIndia/RK=2/RS=4.urAfYc_YVdPeJ2jhPOf_2mrOM-'>click here</a></MARQUEE>
+</FOOTER>
+
+</BODY>
+</HTML>
