--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ INCREDIBLE INDIA
 
 <H2 FONT-FAMILY-"LUCIDA CONSOLE">
 <UL STYLE="PADDING:10PX;">
-<LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="INDEX.HTML">HOME</A>||</LI>
+<LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="index.html">HOME</A>||</LI>
 <LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="POPULAR.HTML">POPULAR DESTINATION</A>||</LI>
 <LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="SPIRITUAL.HTML">SPIRITUAL CAPITAL</A>||</LI>
 <LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="HERITAGE.HTML">HERITAGE SITES</A>||</LI>
