--- a/HERITAGE.HTML
+++ b/HERITAGE.HTML
@@ -13,10 +13,10 @@ heritage
 
 <h2 font-family="Lucida Console"><ul style="padding:10px;">
 <li style="display:inline-block"><a href="index.html">Home </a>||</li>
-<li style="display:inline-block"><a href="Popular.html">Popular Destination </a>||</li>
-<li style="display:inline-block"><a href="Spiritual.html">Spiritual Capital </a>||</li>
-<li style="display:inline-block"><a href="Heritage.html">Heritage Sites</a>||</li>
-<li style="display:inline-block"><a href="Beach.html"> Serene Beaches </a></li>
+<li style="display:inline-block"><a href="POPULAR.HTML">Popular Destination </a>||</li>
+<li style="display:inline-block"><a href="SPIRITUAL.HTML">Spiritual Capital </a>||</li>
+<li style="display:inline-block"><a href="HERITAGE.HTML">Heritage Sites</a>||</li>
+<li style="display:inline-block"><a href="BEACH.HTML"> Serene Beaches </a></li>
 
 </ul>
 </h2>
