--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ INCREDIBLE INDIA
 <H1> INCREDIBLE INDIA </H1>
 <MARQUEE HSPACE="98PX" STYLE="COLOR:ORANGE"><B>EXPLORE THE BEST DESTINATION TO VISIT IN INDIA</B></MARQUEE>
 
-
 <H2 FONT-FAMILY-"LUCIDA CONSOLE">
 <UL STYLE="PADDING:10PX;">
 <LI STYLE="DISPLAY:INLINE-BLOCK;"><A HREF="index.html">HOME</A>||</LI>
@@ -23,7 +22,7 @@ INCREDIBLE INDIA
 </H2>
 </CENTER>
 </HEADER>
-<SECTION STYLE="PADDING-LEFT:100PX;"><IMG SRC="https://tse3.mm.bing.net/th?id=OIP.ATYOACojPvz77bvPDkJI9AHaE8&pid=Api&P=0&w=236&h=157" height="225PX" WIDTH="650"></IMG></SECTION>
+<SECTION STYLE="PADDING-LEFT:100PX; BORDER-RADIUS:100PX 0 100PX 0; BORDER:SOLID 5PX RED;"><IMG SRC="https://tse3.mm.bing.net/th?id=OIP.ATYOACojPvz77bvPDkJI9AHaE8&pid=Api&P=0&w=236&h=157" height="225PX" WIDTH="650"></IMG></SECTION>
 
 <ARTICLE STYLE="MARGIN-TOP:100PX;PADDING-LEFT:100PX;PADDING-RIGHT:100PX;COLOR:Black;"><P STYLE="FONT-SIZE:20PX;">
   
