--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@ INCREDIBLE INDIA
 </H2>
 </CENTER>
 </HEADER>
-<SECTION STYLE="PADDING-LEFT:100PX;"><IMG SRC="https://tse3.mm.bing.net/th?id=OIP.ATYOACojPvz77bvPDkJI9AHaE8&pid=Api&P=0&w=236&h=157" height="225PX" WIDTH="650" STYLE="BORDER:SOLID 5PX RED; BORDER-RADIUS:100PX 0 100PX 0;"></IMG></SECTION>
-
+        .IMG{
+        CLASS="BORDER:SOLID 5PX ORANGE;
+        BORDER-RADIUS:100PX 0 100PX 0;"
+        }
+<SECTION STYLE="PADDING-LEFT:100PX;"><IMG SRC="https://tse3.mm.bing.net/th?id=OIP.ATYOACojPvz77bvPDkJI9AHaE8&pid=Api&P=0&w=236&h=157" height="225PX" WIDTH="650"></IMG></SECTION>
 <ARTICLE STYLE="MARGIN-TOP:100PX;PADDING-LEFT:100PX;PADDING-RIGHT:100PX;COLOR:Black;"><P STYLE="FONT-SIZE:20PX;">
   
      India, where cultures echoes, tradition speaks, beauty enthralls and diversity delights. Astounding diversity of 
