--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ INCREDIBLE INDIA
 </CENTER>
 </HEADER>
         .IMG{
-        CLASS="BORDER:SOLID 5PX ORANGE;
+        BORDER:SOLID 5PX ORANGE;
         BORDER-RADIUS:100PX 0 100PX 0;"
         }
 <SECTION STYLE="PADDING-LEFT:100PX;"><IMG SRC="https://tse3.mm.bing.net/th?id=OIP.ATYOACojPvz77bvPDkJI9AHaE8&pid=Api&P=0&w=236&h=157" height="225PX" WIDTH="650"></IMG></SECTION>
