--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@ INCREDIBLE INDIA
 </H2>
 </CENTER>
 </HEADER>
-        .IMG{
-        BORDER:SOLID 5PX ORANGE;
-        BORDER-RADIUS:100PX 0 100PX 0;"
-        }
+        <IMG STYLE="BORDER:SOLID 5PX ORANGE; BORDER-RADIUS:100PX 0 100PX 0;">
 <SECTION STYLE="PADDING-LEFT:100PX;"><IMG SRC="https://tse3.mm.bing.net/th?id=OIP.ATYOACojPvz77bvPDkJI9AHaE8&pid=Api&P=0&w=236&h=157" height="225PX" WIDTH="650"></IMG></SECTION>
 <ARTICLE STYLE="MARGIN-TOP:100PX;PADDING-LEFT:100PX;PADDING-RIGHT:100PX;COLOR:Black;"><P STYLE="FONT-SIZE:20PX;">
   
